force-app/main/default/objects/Product_Group__c/Product_Group__c.object-meta.xml
<CustomObject>
    <label>Product Group</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>