force-app/main/default/objects/Product_Group__c/fields/Total_Inventory_Available__c.field-meta.xml
<CustomField>
    <fullName>Total_Inventory_Available__c</fullName>
    <label>Total Inventory Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>