force-app/main/default/objects/Product_Group__c/fields/Tracked_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Tracked_Inventory__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Tracked Inventory</label>
    <type>Checkbox</type>
</CustomField>