force-app/main/default/objects/Product_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Inventory_Available__c</columns>
    <columns>Total_Inventory_Owed__c</columns>
    <columns>Total_Inventory_Balance__c</columns>
    <columns>Total_Inventory_Forecast__c</columns>
    <columns>Total_Inventory_Balance_Worst_Case__c</columns>
    <columns>Last_Inventory_Update__c</columns>
    <columns>Total_Inventory_Broken__c</columns>
    <columns>Total_Inventory_Claimed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>